tests/semantic/valid/expressions/test_comparison.src
fn main() -> int {
    int x = 10;
    int y = 20;
    bool b1 = x < y;
    bool b2 = x > y;
    bool b3 = x == 10;
    bool b4 = x != 5;
    if (b1 && !b2) {
        return 1;
    }
    return 0;
}