tests/semantic/invalid/type_errors/test_condition_not_bool.src
fn main() -> int {
    int x = 10;
    if (x) {
        return 1;
    }
    return 0;
}